--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,10 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "stream"
+            ]
           },
           "configurations": {
             "production": {
