--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/router": "~12.2.0",
     "@datorama/akita": "^6.2.3",
     "bluebird": "^3.7.2",
+    "csv-string": "^4.0.1",
     "ngx-chess-board": "^2.1.14",
     "rxjs": "~6.6.0",
+    "stream-browserify": "^3.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -33,7 +35,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@datorama/akita-ngdevtools": "^6.0.0",
     "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.27",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
