--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bluebird": "^3.7.2",
     "csv-string": "^4.0.1",
     "ngx-chess-board": "^2.1.14",
+    "ngx-countdown": "^12.0.1",
     "rxjs": "~6.6.0",
     "stream-browserify": "^3.0.0",
     "tslib": "^2.3.0",
