--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@datorama/akita": "^6.2.3",
+    "@types/lodash": "^4.14.175",
     "bluebird": "^3.7.2",
     "csv-string": "^4.0.1",
+    "lodash": "^4.17.21",
     "ngx-chess-board": "^2.1.14",
     "ngx-countdown": "^12.0.1",
     "rxjs": "~6.6.0",
