--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@datorama/akita": "^6.2.3",
+    "@juggle/resize-observer": "^3.3.1",
     "@types/lodash": "^4.14.175",
     "bluebird": "^3.7.2",
     "csv-string": "^4.0.1",
+    "echarts": "^5.2.1",
     "lodash": "^4.17.21",
     "ngx-chess-board": "^2.1.14",
     "ngx-countdown": "^12.0.1",
+    "ngx-echarts": "^7.0.2",
     "rxjs": "~6.6.0",
     "stream-browserify": "^3.0.0",
     "tslib": "^2.3.0",
@@ -37,6 +40,7 @@
     "@angular/cli": "~12.2.6",
     "@angular/compiler-cli": "~12.2.0",
     "@datorama/akita-ngdevtools": "^6.0.0",
+    "@types/echarts": "^4.9.10",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.20.27",
     "jasmine-core": "~3.8.0",
